--- a/css/style.css
+++ b/css/style.css
@@ -1224,3 +1224,121 @@ header .button{
     padding: 14px 10px;
 }
 /* End Subscribe */
+/* Start Contact */
+.contact{
+    padding: var(--main-padding) 0;
+}
+.contact .content{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.contact .content form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    flex-basis: 80%;
+}
+.contact .content form input:hover,
+.contact .content form textarea:hover{
+    border-color: var(--main-color);
+    box-shadow: 0 2px 15px 0 var(--main-color);
+}
+.contact .content form input,
+.contact .content form textarea{
+    padding: 15px;
+    border: none;
+    border: 1px solid #c4c4c4;
+    font-size: 20px;
+    caret-color: var(--main-color);
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+.contact .content form textarea{
+    transition: 0s;
+    -webkit-transition: 0s;
+    -moz-transition: 0s;
+    -ms-transition: 0s;
+    -o-transition: 0s;
+    width: 100%;
+    height: fit-content;
+    max-width: 945px;
+    max-height: 500px;
+    min-width: 175px;
+    min-height: 57px;
+}
+.contact .content form button{
+    width: fit-content;
+    padding: 20px;
+    align-self: flex-end;
+    font-size: 20px;
+    border: none;
+    background: var(--main-color);
+    color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: 0.3s;
+    border: 1px solid transparent;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+.contact .content form button:hover{
+    background-color: transparent;
+    border-color: var(--main-color);
+    color: var(--main-color);
+    box-shadow: 0 2px 15px 0 var(--main-color);
+    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -o-transform: translateY(-10px);
+}
+.contact .text{
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+.contact .text h3{
+    font-weight: normal;
+    font-size: 20px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.contact .text p{
+    line-height: 1.5;
+    color: #777;
+}
+@media (max-width: 1090px) {
+    .contact .content{
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+    .contact .content .text{
+        width: 100%;
+        display: flex;
+        gap: 25px;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    .contact .content .text br{
+        display: none;
+    }
+}
+@media (max-width: 768px) {
+    .contact .content form button{
+        align-self: center;
+    }
+    .contact .content form textarea{
+        max-width: 100%;
+    }
+}
+/* End Contact */
